--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@
   <main>
     <!--Hero -->
     <section class="business">
+      <div class="container">
       <h1 class="business-h">Effective Solutions
         for Your Business</h1>
       <button type="button" class="button-business">Order Service</button>
+      </div>
     </section>
     <!-- end Hero -->
     <!-- Features -->
     <section>
+      <div class="container">
       <h2 class="base-h-two">Features</h2>
       <ul>
         <li>
@@ -76,10 +79,12 @@
             problem-solving.</p>
         </li>
       </ul>
+      </div>
     </section>
     <!-- end Features -->
     <!-- Our Team -->
     <section class="team">
+      <div class="container">
       <h2 class="base-h-two-one">Our Team</h2>
       <ul>
         <li class="team-link">
@@ -103,11 +108,13 @@
           <p class="base-p">UI Designer</p>
         </li>
       </ul>
+      </div>
     </section>
     <!-- end Our Team -->
 
     <!-- Our Portfolio -->
      <section class="base">
+      <div class="container">
     <h2 class="base-h-two-one">Our Portfolio</h2>
     <ul>
       <li>
@@ -141,15 +148,18 @@
         <p class="base-p">Marketing</p>
       </li>
     </ul>
+    </div>
     </section>
     <!-- end Our Portfolio -->
   </main>
   <footer class="footer">
+    <div class="container">
     <a href="./index.html" class="logo-footer">Web
       <span class="logo-footer-span">Studio</span></a>
     <p class="footer-p">
       Increase the flow of customers and sales for your business with digital marketing & growth solutions.
     </p>
+    </div>
   </footer>
 </body>
 
