--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
     <!-- end Hero -->
     <!-- Features -->
-    <section>
+    <section class="features-section">
       <div class="container">
       <h2 class="base-h-two">Features</h2>
       <ul>
