--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <section class="features-section">
       <div class="container">
       <h2 class="base-h-two">Features</h2>
-      <ul>
-        <li>
+      <ul class="base-h-two-two">
+        <li class="base-h-two-three">
           <h3 class="base-h-three">Strategy</h3>
           <p class="base-p">Our goal is to identify the business
             problem to walk away with the perfect and creative solution.</p>
