--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
       <ul class="base-h-two-two">
         <li class="base-h-two-three">
           <h3 class="base-h-three">Strategy</h3>
-          <p class="base-p">Our goal is to identify the business
+          <p class="base-h-three-four">Our goal is to identify the business
             problem to walk away with the perfect and creative solution.</p>
         </li>
         <li>
           <h3 class="base-h-three">Punctuality</h3>
-          <p class="base-p">Bring the key message to the brand's audience for the best price within the shortest
+          <p class="base-h-three-four">Bring the key message to the brand's audience for the best price within the shortest
             possible time.</p>
         </li>
         <li>
           <h3 class="base-h-three">Diligence</h3>
-          <p class="base-p">Research and confirm brands with the strongest digital growth opportunities and minimize
+          <p class="base-h-three-four">Research and confirm brands with the strongest digital growth opportunities and minimize
             risk.</p>
         </li>
         <li>
           <h3 class="base-h-three">Technologies</h3>
-          <p class="base-p">Design practice focused on digital experiences. We bring forth a deep passion for
+          <p class="base-h-three-four">Design practice focused on digital experiences. We bring forth a deep passion for
             problem-solving.</p>
         </li>
       </ul>
@@ -90,22 +90,22 @@
         <li class="team-link">
           <img src="./images/MarkGuerrero.jpg" alt="MarkG" width="264" height="260">
           <h3 class="base-h-three">Mark Guerrero</h3>
-          <p class="base-p">Product Designer</p>
+          <p class="base-h-three-four">Product Designer</p>
         </li>
         <li class="team-link">
           <img src="./images/TomFord.jpg" alt="TomF" width="264" height="260">
           <h3 class="base-h-three">Tom Ford</h3>
-          <p class="base-p">Frontend Developer</p>
+          <p class="base-h-three-four">Frontend Developer</p>
         </li>
         <li class="team-link">
           <img src="./images/CamilaGarcia.jpg" alt="CamilaG" width="264" height="260">
           <h3 class="base-h-three">Camila Garcia</h3>
-          <p class="base-p">Marketing</p>
+          <p class="base-h-three-four">Marketing</p>
         </li>
         <li class="team-link">
           <img src="./images/DanielWilson.jpg" alt="DanielW" width="264" height="260">
           <h3 class="base-h-three">Daniel Wilson</h3>
-          <p class="base-p">UI Designer</p>
+          <p class="base-h-three-four">UI Designer</p>
         </li>
       </ul>
       </div>
@@ -120,32 +120,32 @@
       <li>
         <img src="./images/ProjectCard1.jpg" alt="PC1" width="360" height="300">
         <h3 class="base-h-three">Banking App</h3>
-        <p class="base-p">App</p>
+        <p class="base-base-h-three-four">App</p>
       </li>
       <li>
         <img src="./images/ProjectCard2.jpg" alt="PC2" width="360" height="300">
         <h3 class="base-h-three">Cashless Payment</h3>
-        <p class="base-p">Marketing</p>
+        <p class="base-base-h-three-four">Marketing</p>
       </li>
       <li>
         <img src="./images/ProjectCard3.jpg" alt="PC3" width="360" height="300">
         <h3 class="base-h-three">Meditation App</h3>
-        <p class="base-p">App</p>
+        <p class="base-base-h-three-four">App</p>
       </li>
       <li>
         <img src="./images/ProjectCard4.jpg" alt="PC4" width="360" height="300">
         <h3 class="base-h-three">Taxi Service</h3>
-        <p class="base-p">Marketing</p>
+        <p class="base-base-h-three-four">Marketing</p>
       </li>
       <li>
         <img src="./images/ProjectCard5.jpg" alt="PC5" width="360" height="300">
         <h3 class="base-h-three">Screen Illustrations</h3>
-        <p class="base-p">Design</p>
+        <p class="base-base-h-three-four">Design</p>
       </li>
       <li>
         <img src="./images/ProjectCard6.jpg" alt="PC6" width="360" height="300">
         <h3 class="base-h-three">Online Courses</h3>
-        <p class="base-p">Marketing</p>
+        <p class="base-base-h-three-four">Marketing</p>
       </li>
     </ul>
     </div>
