--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
           <p class="base-h-three-four">Our goal is to identify the business
             problem to walk away with the perfect and creative solution.</p>
         </li>
-        <li>
+        <li class="base-h-two-three">
           <h3 class="base-h-three">Punctuality</h3>
           <p class="base-h-three-four">Bring the key message to the brand's audience for the best price within the shortest
             possible time.</p>
         </li>
-        <li>
+        <li class="base-h-two-three">
           <h3 class="base-h-three">Diligence</h3>
           <p class="base-h-three-four">Research and confirm brands with the strongest digital growth opportunities and minimize
             risk.</p>
         </li>
-        <li>
+        <li class="base-h-two-three">
           <h3 class="base-h-three">Technologies</h3>
           <p class="base-h-three-four">Design practice focused on digital experiences. We bring forth a deep passion for
             problem-solving.</p>
