--- a/index.html
+++ b/index.html
@@ -86,26 +86,34 @@
     <section class="team">
       <div class="container">
       <h2 class="base-h-two-one">Our Team</h2>
-      <ul>
+      <ul class="base-h-one-two">
         <li class="team-link">
           <img src="./images/MarkGuerrero.jpg" alt="MarkG" width="264" height="260">
-          <h3 class="base-h-three">Mark Guerrero</h3>
-          <p class="base-h-three-four">Product Designer</p>
+          <div class="container-one">
+          <h3 class="team-member-name">Mark Guerrero</h3>
+          <p class="team-member-name-descr">Product Designer</p>
+          </div>
         </li>
         <li class="team-link">
           <img src="./images/TomFord.jpg" alt="TomF" width="264" height="260">
-          <h3 class="base-h-three">Tom Ford</h3>
-          <p class="base-h-three-four">Frontend Developer</p>
+          <div class="container-one">
+          <h3 class="team-member-name">Tom Ford</h3>
+          <p class="team-member-name-descr">Frontend Developer</p>
+          </div>
         </li>
         <li class="team-link">
           <img src="./images/CamilaGarcia.jpg" alt="CamilaG" width="264" height="260">
-          <h3 class="base-h-three">Camila Garcia</h3>
-          <p class="base-h-three-four">Marketing</p>
+          <div class="container-one">
+          <h3 class="team-member-name">Camila Garcia</h3>
+          <p class="team-member-name-descr">Marketing</p>
+          </div>
         </li>
         <li class="team-link">
           <img src="./images/DanielWilson.jpg" alt="DanielW" width="264" height="260">
-          <h3 class="base-h-three">Daniel Wilson</h3>
-          <p class="base-h-three-four">UI Designer</p>
+          <div class="container-one">
+          <h3 class="team-member-name">Daniel Wilson</h3>
+          <p class="team-member-name-descr">UI Designer</p>
+          </div>
         </li>
       </ul>
       </div>
