--- a/index.html
+++ b/index.html
@@ -121,39 +121,51 @@
     <!-- end Our Team -->
 
     <!-- Our Portfolio -->
-     <section class="base">
+     <section class="portfolio-section">
       <div class="container">
-    <h2 class="base-h-two-one">Our Portfolio</h2>
-    <ul>
-      <li>
+    <h2 class="portfolio-section-title">Our Portfolio</h2>
+    <ul class="portfolio-section-list">
+      <li class="portfolio-item">
         <img src="./images/ProjectCard1.jpg" alt="PC1" width="360" height="300">
-        <h3 class="base-h-three">Banking App</h3>
-        <p class="base-base-h-three-four">App</p>
+        <div class="list-portf-content">
+        <h3 class="portfolio-list-name">Banking App</h3>
+        <p class="portfolio-list-description">App</p>
+        </div>
       </li>
-      <li>
+      <li class="portfolio-item">
         <img src="./images/ProjectCard2.jpg" alt="PC2" width="360" height="300">
-        <h3 class="base-h-three">Cashless Payment</h3>
-        <p class="base-base-h-three-four">Marketing</p>
+        <div class="list-portf-content">
+        <h3 class="portfolio-list-name">Cashless Payment</h3>
+        <p class="portfolio-list-description">Marketing</p>
+        </div>
       </li>
-      <li>
+      <li class="portfolio-item">
         <img src="./images/ProjectCard3.jpg" alt="PC3" width="360" height="300">
-        <h3 class="base-h-three">Meditation App</h3>
-        <p class="base-base-h-three-four">App</p>
+        <div class="list-portf-content">
+        <h3 class="portfolio-list-name">Meditation App</h3>
+        <p class="portfolio-list-description">App</p>
+        </div>
       </li>
-      <li>
+      <li class="portfolio-item">
         <img src="./images/ProjectCard4.jpg" alt="PC4" width="360" height="300">
-        <h3 class="base-h-three">Taxi Service</h3>
-        <p class="base-base-h-three-four">Marketing</p>
+        <div class="list-portf-content">
+        <h3 class="portfolio-list-name">Taxi Service</h3>
+        <p class="portfolio-list-description">Marketing</p>
+        </div>
       </li>
-      <li>
+      <li class="portfolio-item">
         <img src="./images/ProjectCard5.jpg" alt="PC5" width="360" height="300">
-        <h3 class="base-h-three">Screen Illustrations</h3>
-        <p class="base-base-h-three-four">Design</p>
+        <div class="list-portf-content">
+        <h3 class="portfolio-list-name">Screen Illustrations</h3>
+        <p class="portfolio-list-description">Design</p>
+        </div>
       </li>
-      <li>
+      <li class="portfolio-item">
         <img src="./images/ProjectCard6.jpg" alt="PC6" width="360" height="300">
-        <h3 class="base-h-three">Online Courses</h3>
-        <p class="base-base-h-three-four">Marketing</p>
+        <div class="list-portf-content">
+        <h3 class="portfolio-list-name">Online Courses</h3>
+        <p class="portfolio-list-description">Marketing</p>
+        </div>
       </li>
     </ul>
     </div>
