--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
     </section>
     <!-- end Our Portfolio -->
   </main>
-  <footer class="footer">
+  <footer class="section-footer">
     <div class="container">
-    <a href="./index.html" class="logo-footer">Web
-      <span class="logo-footer-span">Studio</span></a>
-    <p class="footer-p">
-      Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+      <a class="logo-footer" href="./index.html">Web<span class="logo-text-footer">Studio</span></a>
+      <p class="section-footer-descr">
+        Increase the flow of customers and sales for your business with
+        digital marketing & growth solutions.
     </p>
     </div>
   </footer>
